@@ -20,6 +20,7 @@
     <dependency org="org.jminor" name="jminor-common-model" rev="latest.integration"/>
     <dependency org="org.jminor" name="jminor-swing-common-model" rev="latest.integration"/>
     <dependency org="org.jminor" name="jminor-swing-common-ui" rev="latest.integration"/>
+    <dependency org="org.jminor" name="jminor-server" rev="latest.integration" conf="%->master"/>
 
     <dependency org="org.slf4j" name="slf4j-api" rev="1.7.7"/>
     <dependency org="ch.qos.logback" name="logback-classic" rev="1.1.3"/>
@@ -28,6 +29,9 @@
     <dependency org="org.jfree" name="jcommon" rev="1.0.23"/>
     <dependency org="org.jfree" name="jfreechart" rev="1.0.19"/>
 
+    <dependency org="org.jminor" name="jminor-db-remote" rev="latest.integration" conf="test->default"/>
+    <dependency org="org.jminor" name="jminor-framework-model-unittests" rev="latest.integration" conf="test->default"/>
+    <dependency org="com.h2database" name="h2" rev="1.4.191" conf="test->master"/>
     <dependency org="junit" name="junit" rev="4.12" conf="test->master"/>
     <dependency org="org.hamcrest" name="hamcrest-core" rev="1.3" conf="test->master"/>
   </dependencies>
