@@ -1,3 +1,0 @@
-<project name="jminor-server-monitor">
-  <import file="../../../build-module.xml"/>
-</project>
